add mcl_sounds dependency

--- a/mod.conf
+++ b/mod.conf
@@ -1,4 +1,4 @@
 name = mcl_more_ore_variants
 author = NO11
-depends = mcl_core, mcl_deepslate, mcl_raw_ores, mcl_copper, mcl_mapgen_core
+depends = mcl_core, mcl_deepslate, mcl_raw_ores, mcl_copper, mcl_mapgen_core, mcl_sounds
 description = Make ores in stone like andesite or diorite look better. Idea by Zhe Leader of Novvelia.
